--- a/setup-java/action.yml
+++ b/setup-java/action.yml
@@ -14,11 +14,11 @@ runs:
         tar -xzf .jdk5/jdk.tar.gz -C .jdk5 --strip-components 1
         .jdk5/bin/java -version
         echo "JAVA_HOME_5_X64=$PWD/.jdk5" >> $GITHUB_ENV
-    - if: ${{ inputs.version == '23' }}
-      uses: oracle-actions/setup-java@8a13c93dd514d680ef9b3b70b7549b90be7d314d # main
-      with:
-        website: jdk.java.net
-        release: 23
+#    - if: ${{ inputs.version == '23' }}
+#      uses: oracle-actions/setup-java@8a13c93dd514d680ef9b3b70b7549b90be7d314d # main
+#      with:
+#        website: jdk.java.net
+#        release: 23
     - if: ${{ inputs.version != '5' && inputs.version != '23' }}
       uses: actions/setup-java@387ac29b308b003ca37ba93a6cab5eb57c8f5f93 # v4.0.0
       with:
